# routeformer

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
docs/: Data-Download.md  GPS-Data-Documentation.md  Test-Data-Extraction.md  Using-GVTNetDataset.md
experiments/: __init__.py  full_comparison.py
experiments/autobots/: autobots.py
experiments/gimo/: adapted_gimo.py  base_cross_model.py
experiments/multimodal_transformer/: multimodal_transformer.py
routeformer/: __init__.py
routeformer/io/: __init__.py  dataset.py  dataset_dreyeve.py  file_methods.py  gaze.py  image_stitcher.py
routeformer/losses/: __init__.py  future_discounted_mse.py
routeformer/models/: __init__.py  config.py  cross_modal_transformer.py  routeformer.py
routeformer/models/gps_backbone/: Autoformer.py  Baselines.py  FEDformer.py  Informer.py  Linear.py  PatchTST.py  Transformer.py  __init__.py  config.py
routeformer/models/gps_backbone/layers/: AutoCorrelation.py  AutoformerEncoderDecoder.py  Embedding.py  FourierCorrelation.py  MultiWaveletCorrelation.py  PatchTSTBackbone.py  PatchTSTLayers.py  ReversibleInstanceNorm.py  SelfAttentionFamily.py  TransformerEncoderDecoder.py  __init__.py
routeformer/models/video_backbone/: InverseForm.py  TimmBackbone.py  __init__.py  config.py
routeformer/models/video_backbone/inverse_form_layers/: InverseForm.py  __init__.py  attr_dict.py  config.py  hrnetv2.py  lighthrnet.py  misc.py  mynn.py  ocr_utils.py  ocrnet.py  utils.py
routeformer/optimizers/: __init__.py  lr_scheduler.py
routeformer/score/: __init__.py  error.py  pci.py
routeformer/utils/: __init__.py  config.py  filter.py  logging.py  vector.py
routeformer/visualize/: __init__.py  gaze.py  plot.py
tests/: __init__.py
tests/io/: __init__.py  test_dataset.py
tests/io/data/dataset1/: dummy.txt
tests/io/data/dataset1/02EyeTracker/001/: gaze.pldata  gaze_timestamps.npy  info.invisible.json  info.player.json  world_timestamps.npy
tests/io/data/dataset1/02EyeTracker/002/: gaze.pldata  gaze_timestamps.npy  info.invisible.json  info.player.json  world.intrinsics  world_timestamps.npy
tests/utils/: __init__.py  test_logging.py
